--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -61,47 +61,14 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/boxusername"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:layout_below="@+id/boxfullname"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="40dp"
-                android:hint="Username"
-                android:textColorHint="@color/buttontext"
-                app:boxCornerRadiusBottomEnd="30dp"
-                app:boxCornerRadiusBottomStart="30dp"
-                app:boxCornerRadiusTopEnd="30dp"
-                app:boxCornerRadiusTopStart="30dp"
-                app:boxStrokeColor="@color/buttontext"
-                app:endIconDrawable="@drawable/outline_close_24"
-                app:endIconMode="clear_text"
-                app:endIconTint="@color/buttontext"
-                app:hintTextColor="@color/buttontext"
-                app:startIconDrawable="@drawable/outline_perm_identity_24"
-                app:startIconTint="@color/buttontext">
 
-                <EditText
-                    android:id="@+id/username"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_light"
-                    android:textColor="@color/buttontext"
-                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">
-
-                </EditText>
-
-            </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/boxnumber"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
-                android:layout_below="@+id/boxusername"
+                android:layout_below="@+id/boxfullname"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="40dp"
@@ -133,11 +100,47 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/boxaddres"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:layout_below="@+id/boxnumber"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="40dp"
+                android:hint="Alamat"
+                android:textColorHint="@color/buttontext"
+                app:boxCornerRadiusBottomEnd="30dp"
+                app:boxCornerRadiusBottomStart="30dp"
+                app:boxCornerRadiusTopEnd="30dp"
+                app:boxCornerRadiusTopStart="30dp"
+                app:boxStrokeColor="@color/buttontext"
+                app:endIconDrawable="@drawable/outline_close_24"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/buttontext"
+                app:hintTextColor="@color/buttontext"
+                app:startIconDrawable="@drawable/round_local_phone_24"
+                app:startIconTint="@color/buttontext">
+
+                <EditText
+                    android:id="@+id/address"
+                    android:inputType="number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_light"
+                    android:textColor="@color/buttontext"
+                    tools:ignore="SpeakableTextPresentCheck">
+
+                </EditText>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/boxpassword"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/boxnumber"
+                android:layout_below="@+id/boxaddres"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="40dp"
@@ -165,53 +168,31 @@
                     android:textColor="@color/buttontext"
                     tools:ignore="SpeakableTextPresentCheck"></EditText>
             </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/boxpassword2"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/boxpassword"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="40dp"
-                android:hint="Confirm Password"
-                android:textColorHint="@color/buttontext"
-                app:boxCornerRadiusBottomEnd="30dp"
-                app:boxCornerRadiusBottomStart="30dp"
-                app:boxCornerRadiusTopEnd="30dp"
-                app:boxCornerRadiusTopStart="30dp"
-                app:boxStrokeColor="@color/buttontext"
-                app:helperText="Required"
-                app:helperTextTextColor="@color/buttontext"
-                app:hintTextColor="@color/buttontext"
-                app:passwordToggleEnabled="true"
-                app:passwordToggleTint="@color/buttontext"
-                app:startIconDrawable="@drawable/outline_lock_24"
-                app:startIconTint="@color/buttontext">
-
-                <EditText
-                    android:id="@+id/password2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_light"
-                    android:inputType="textPassword"
-                    android:textColor="@color/buttontext"
-                    tools:ignore="SpeakableTextPresentCheck"></EditText>
-            </com.google.android.material.textfield.TextInputLayout>
-
             <Button
                 android:id="@+id/btnregist"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:layout_below="@id/boxpassword2"
+                android:layout_below="@id/boxpassword"
                 android:layout_centerInParent="true"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:text="Register"
                 android:textColor="@color/white">
-
             </Button>
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.349"
+                tools:visibility="visible" />
         </RelativeLayout>
     </ScrollView>
 
